--- a/Kites-Yasmin/res/values/strings.xml
+++ b/Kites-Yasmin/res/values/strings.xml
@@ -1,5 +1,13 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
     <string name="app_name">Kites-Yasmin</string>
+    <string name="title_activity_main">Kites</string>
+    <string name="title_activity_catalog">Catalogs</string>
+    <string name="action_settings">Settings</string>
+    <string name="text_welcome">\nopen source shopping cart</string>
+    <string name="text_start">Start</string>
+    <string name="category_name_placeholder">Category name</string>
+    
 
 </resources>
