--- a/Kites-Yasmin/res/values/strings.xml
+++ b/Kites-Yasmin/res/values/strings.xml
@@ -4,10 +4,13 @@
     <string name="app_name">Kites-Yasmin</string>
     <string name="title_activity_main">Kites</string>
     <string name="title_activity_catalog">Catalogs</string>
+    <string name="title_activity_product">Products</string>
     <string name="action_settings">Settings</string>
+    <string name="action_exit">Exit</string>
     <string name="text_welcome">\nopen source shopping cart</string>
     <string name="text_start">Start</string>
     <string name="category_name_placeholder">Category name</string>
+    <string name="product_name_placeholder">Produxt name</string>
     
 
 </resources>
