--- a/Kites-Yasmin/res/values/strings.xml
+++ b/Kites-Yasmin/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_name">Kites-Yasmin</string>
     <string name="title_activity_main">Kites</string>
     <string name="title_activity_catalog">Catalogs</string>
+       <string name="title_activity_product">Products</string>
     <string name="action_settings">Settings</string>
     <string name="text_welcome">\nopen source shopping cart</string>
     <string name="text_start">Start</string>
