--- a/Kites-Yasmin/res/values/strings.xml
+++ b/Kites-Yasmin/res/values/strings.xml
@@ -2,14 +2,20 @@
 <resources>
 
     <string name="app_name">Kites-Yasmin</string>
-    <string name="title_activity_main">Kites</string>
+    <string name="title_activity_main">Yasmin</string>
     <string name="title_activity_catalog">Catalogs</string>
     <string name="title_activity_product">Products</string>
+    <string name="title_activity_detailProduct">Product Details</string>
     <string name="action_settings">Settings</string>
     <string name="action_exit">Exit</string>
-    <string name="text_welcome">\nopen source shopping cart</string>
+    <string name="text_welcome">\nKites Open Source Shopping Cart Client</string>
     <string name="text_start">Start</string>
+    <string name="text_add_to_cart">Add to cart</string>
     <string name="category_name_placeholder">Category name</string>
-    <string name="product_name_placeholder">Produxt name</string>
+    <string name="product_name_placeholder">Product name:</string>
+    <string name="product_description_placeholder">Product description:</string>
+    <string name="product_brand_placeholder">Product brand:</string>
+    <string name="product_price_placeholder">Product price:</string>
+    <string name="product_tprice_placeholder">Quantity and Total price:</string>
 
 </resources>
