--- a/Kites-Yasmin/res/values/strings.xml
+++ b/Kites-Yasmin/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="title_activity_catalog">Catalogs</string>
     <string name="title_activity_product">Products</string>
     <string name="title_activity_detailProduct">Product Details</string>
+    <string name="title_activity_cart">Cart</string>
     <string name="action_settings">Settings</string>
     <string name="action_exit">Exit</string>
     <string name="text_welcome">\nKites Open Source Shopping Cart Client</string>
